fix: filtering